--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,11 @@
 {
   "deno.enable": true,
   "deno.config": "deno.jsonc",
-  "deno.importMap": "./import_map.json",
   "deno.lint": true,
   "deno.unstable": true,
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "denoland.vscode-deno",
   "deno.suggest.imports.hosts": {
-    "https://deno.land": false
+    "https://deno.land": true
   }
 }
